Mainly, I've corrected the contact and about html documents and some other little errors in other documents, added one progress bar and set

--- a/web con plantilla final/index.html
+++ b/web con plantilla final/index.html
@@ -102,7 +102,6 @@
         <!-- end header -->
         <section id="featured" class="bg">
             <!-- start slider -->
-            <!-- start slider -->
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -114,7 +113,7 @@
                                     <div class="flex-caption">
                                         <h3>Ensayo clínico del Dr. Fumihiko Urano</h3>
                                         <p>Consiste en determinar la seguridad y efectividad de un medicamento para las personas con síndrome de Wolfram con la finalidad de retrasar la progresión de dicho síndrome.</p>
-                                        <a href="project_fumi.html" class="btn btn-theme">Leer más</a>
+	                                        <a href="project_fumi.html" class="btn btn-theme">Leer más</a>
                                     </div>
                                 </li>
                                 <li>
@@ -243,22 +242,28 @@
                             
                                     <h4>Colabora con nuestros proyectos</h4>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuetext="Proyecto 1: 40%" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                        Proyecto 1: 40%
+                                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuetext="Ensayo clínico del Dr. Fumihiko Urano: 0%" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                                        Ensayo clínico del Dr. Fumihiko Urano: 0%
                                     </div>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuetext="Proyecto 2: 80%" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                                        Proyecto 2: 80%
+                                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="93" aria-valuetext="Ensayo clínico liderado por Dr. Timothy Barrett" aria-valuemin="0" aria-valuemax="100" style="width: 93%">
+                                        Ensayo clínico liderado por Dr. Timothy Barrett: 93%
                                     </div>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuetext="Proyecto 3: 60%" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                                        Proyecto 3: 60%
+                                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="69" aria-valuetext="Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud: 69%" aria-valuemin="0" aria-valuemax="100" style="width: 69%">
+                                        Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud: 69%
                                     </div>
                                 </div>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuetext="Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares: 100%" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                     Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares: 100%
+                                    </div>
+                                </div>
+
                                 <!--	<div class="progress">
-						  <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+						  <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
 							Proyecto 4 (Closed): 80% 
 						  </div>
 						</div>
@@ -399,7 +404,6 @@
             </div>
         </footer>
     </div>
-<!--aq:-->
     <a href="#" class="scrollup"><i class="fa fa-angle-up active"></i></a>
 
     <!-- Placed at the end of the document so the pages load faster -->
@@ -417,8 +421,6 @@
     <script src="js/google-code-prettify/prettify.js"></script>
     <script src="js/animate.js"></script>
     <script src="js/custom.js"></script>
-
-
 </body>
 
 </html>
