--- a/web con plantilla final/project_fumi.html
+++ b/web con plantilla final/project_fumi.html
@@ -79,7 +79,7 @@
                             <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
                             <li><a href="contact.html">Contacto</a></li>
-                            <li><a href="about.html">Sobre nosotros</a></li>
+                            <li><a href="about.html">Sobre sus desarrolladores</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
@@ -117,6 +117,8 @@
                       <header>
                         <h4 class="heading">Ensayo clínico del Dr. Fumihiko Urano</h4>
                       </header>
+
+                        <img src="fotos/fumi.jpg" alt="Foto del investigador"/>
 
 <!--
                         <div id="filters-container" class="cbp-l-filters-button">
@@ -252,14 +254,15 @@
                            <th>Duración</th>
                            <td>9 meses</td>
                         </tr>
-
                         <tr>
                            <th>Año de inicio previsto</th>
                            <td>2018</td>
                         </tr>
                      </table>                      
                      <article>                              
-                     Consiste en determinar la seguridad y efectividad de un medicamento para las personas, tanto niños como adultos, con síndrome de Wolfram con la finalidad de retrasar la progresión de dicho síndrome mediante los parámetros de la agudeza visual, del equilibrio y bioquímicos. Previamente se realizarán unos controles exhaustivos de los pacientes al igual que una vez finalizado el ensayo clínico.
+                     <p>Consiste en determinar la seguridad y efectividad de un medicamento para las personas, tanto niños como adultos, con síndrome de Wolfram con la finalidad de retrasar la progresión de dicho síndrome mediante los parámetros de la agudeza visual, del equilibrio y bioquímicos. Previamente se realizarán unos controles exhaustivos de los pacientes al igual que una vez finalizado el ensayo clínico.</p>
+                     <p>El Dr. Fumihiko Urano es uno de los grandes investigadores en el área del síndrome de Wolfram. Actualmente está en fase de reclutamiento de pacientes para su ensayo clínico en Washington con la finalidad de determinar la seguridad de su principio activo en pacientes con síndrome de Wolfram, teniendo en cuenta que el objetivo del fármaco es retrasar el progreso de esta compleja enfermedad. Requiere, al menos, de 24 pacientes (12 adultos y 12 niños) para llegar a cabo tal ensayo. A consecuencia de los estudios y seguimiento exhaustivos que deben realizarse en tal proyecto, en esta fase sólo pueden participar pacientes que estén próximos a su clínica. Si los resultados obtenidos son óptimos, podrá avanzarse la fase del ensayo clínico y poder determinar también su efectividad.</p>
+                     <p>Previamente ha empleado tal fármaco en modelos de ratones, donde ha obtenido resultados positivos. Sin embargo, requiere, en primer lugar, determinar la seguridad del fármaco para poder ampliarse al resto de pacientes con síndrome de Wolfram.</p>
                      </article>                              
                     </div>
                 </div>
