--- a/web con plantilla final/project_salud.html
+++ b/web con plantilla final/project_salud.html
@@ -117,7 +117,7 @@
                       <header>
                         <h4 class="heading">Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud</h4>
                       </header>
-
+                        <img src="fotos/revisiones.jpg" alt="Foto de los pacientes"/>
 <!--
                         <div id="filters-container" class="cbp-l-filters-button">
                             <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">Todos
@@ -237,6 +237,10 @@
 -->
                      <table class="table table-bordered">                      
                         <tr>
+                           <th>Presupuesto total</th>
+                           <td>60.000 euros</td>
+                        </tr>
+                        <tr>
                            <th>Presupuesto concedido</th>
                            <td>41.614,55 euros</td>
                         </tr>
@@ -254,8 +258,15 @@
                         </tr>
                      </table>                      
                      <article>                              
-                     <p>Se trata de un estudio del fenotipo clínico y curso evolutivo de los pacientes españoles con Síndrome de Wolfram.</p>
-                     <p>El objetivo de este proyecto de investigación se centra en el estudio del fenotipo clínico y curso evolutivo del síndrome de Wolfram desde una perspectiva bio-psicosocial con la finalidad de detectar precozmente complicaciones asociadas a la enfermedad y diseñar un protocolo de actuación para el mismo, mediante la realización de valoraciones anuales, multidisciplinares e integrales (estudios respiratorio, de imagen, neurofisiológico, analítico, psicológico-psiquiátrico, neurológico, oftálmico, ORL y urológico) de los pacientes.</p>
+                     <p>En la actualidad el único grupo español que trabaja en este síndrome es el Grupo Clínico Español, coordinado por la Dra. Gema Esteban Bueno, que desde 1999 realiza seguimiento de la población española y se enfrenta a la carencia de estudios de esta enfermedad, sobre todo, a nivel español. Desde el año 2011 se realiza valoraciones anuales en el Área de Gestión sanitaria Norte de Almería (Hospital La Inmaculada; Huércal-Overa, Almería) y el seguimiento integral de estos pacientes y sus familiares. La mejora en el seguimiento ha producido un descenso en la mortalidad por insuficiencia renal, siendo actualmente el fallo del sistema nervioso central la principal causa de fallecimiento.</p>
+                     <p>Las actividades llevadas a cabo se resumen en:</p>
+                     <ul>
+                         <li>Se evaluarán las características clínicas características del SW en todos los pacientes con este diagnóstico. Se realizará una revisión retrospectiva de los datos clínicos obtenidos de las visitas realizadas hasta la fecha, así como el análisis de los resultados obtenidos de las consultas multidisciplinares, intentando definir las características a tener en cuenta en el seguimiento de la progresión de la enfermedad.</li>
+                         <li>Se organizarán grupos de 10-18 pacientes que serán atendidos por todas las especialidades en jornadas de 2 días al menos una vez al año.</li>
+                         <li>El estudio retrospectivo implica la revisión de la historia clínica y recogida de información sobre datos demográficos, datos antropométricos, historia clínica, tests diagnósticos, tratamientos recibidos, resultados analíticos, resultados radiológicos, de estudios oftalmológicos, estudios de audición, así como las intervenciones de soporte que hayan tenido.</li>
+                     </ul>
+                     <p>El objetivo se centra en el estudio del fenotipo clínico y curso evolutivo del síndrome de Wolfram desde una perspectiva bio-psicosocial con la finalidad de detectar precozmente complicaciones asociadas a la enfermedad y diseñar un protocolo de actuación para el mismo, mediante la realización de valoraciones anuales, multidisciplinares e integrales (estudios respiratorio, de imagen, neurofisiológico, analítico, psicológico-psiquiátrico, neurológico, oftálmico, ORL y urológico) de los pacientes.</p>
+                     <p>Posee un convenio específico con el Instituto de Enfermedades Raras del Instituto de Salud Carlos III para desarrollar el Registro Español del Síndrome de Wolfram, Bardet Biedl y Alström. En 2008 se creó un consorcio europeo de investigadores con el propósito de generar conocimiento a nivel internacional/europeo sobre esta enfermedad poniendo en marcha el proyecto EUROWABB (http://www.euro-wabb.org/es) financiado por la Comisión Europea dentro del Programa Marco de Salud Pública (Acuerdo número 2010 12 05) en el que el grupo Clínico Español participó. Se inició el 1 de enero de 2011 con una duración de 3 años. Este proyecto ha propiciado la elaboración de la primera guía de manejo del síndrome de Wolfram. En la actualidad participan 13 miembros de 10 países. La idea del proyecto EURO-Rare Diabetes surgió de Nolwenn Jaffre, Presidenta de la Asociación Francesa de Wolfram, quien reunió a investigadores del síndrome de Wolfram de todo el mundo en París en octubre de 2009. Se incluyeron como miembros a investigadores del síndrome de Alström, síndrome de Bardet Biedl y síndrome de Wolfram.</p>
                     </article>                              
                     </div>
                 </div>
