--- a/web con plantilla final/projects.html
+++ b/web con plantilla final/projects.html
@@ -82,7 +82,7 @@
                             <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
                             <li><a href="contact.html">Contacto</a></li>
-                            <li><a href="about.html">Sobre nosotros</a></li>
+                            <li><a href="about.html">Sobre sus desarrolladores</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
@@ -95,92 +95,99 @@
                 </div>
             </div>
         </header>
-
         <!-- end header -->
 
         <section id="content">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h4 class="heading">Nnuestros proyectamos</h4>
+                        <h4 class="heading">Nnuestros proyectos</h4>
 
                         <div id="filters-container" class="cbp-l-filters-button">
                             <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">Todos
                                 <div class="cbp-filter-counter"></div>
                             </div>
-                            <div data-filter=".identity" class="cbp-filter-item">Recientes
+                            <div data-filter=".identity" class="cbp-filter-item">Próximos
                                 <div class="cbp-filter-counter"></div>
                             </div>
                             <div data-filter=".web-design" class="cbp-filter-item">2016
                                 <div class="cbp-filter-counter"></div>
                             </div>
-
                             <div data-filter=".graphic" class="cbp-filter-item">2015
                                 <div class="cbp-filter-counter"></div>
                             </div>
-                            <div data-filter=".logo" class="cbp-filter-item">Cerrados
+                            <div data-filter=".logo" class="cbp-filter-item">Antiguos
                                 <div class="cbp-filter-counter"></div>
                             </div>
                         </div>
 
 
-                        <div id="grid-container" class="cbp-l-grid-projects">
-                            <ul>
+                           <ul>
                                 <li class="cbp-item graphic">
                                     <div class="cbp-caption">
                                         <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/1.jpg" alt="" />
+                                            <img src="fotos/fumi urano.jpg" alt="Foto del proyecto" />
                                         </div>
-
                                     <div class="cbp-l-grid-projects-title">Ensayo clínico del Dr. Fumihiko Urano</div>
                                     <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
-
-
-                                        <div class="cbp-caption-activeWrap">
+                                      <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
                                                 <div class="cbp-l-caption-body">
-                                                   <a href="img/works/1big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 1<br>Fecha lanzamiento">Leer más</a>
+                                                   <a href="project_fumi.html" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 1. Fecha lanzamiento">Leer más</a>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-
                                 </li>
                                 <li class="cbp-item web-design logo">
-                                    <div class="cbp-l-grid-projects-title">Ensayo clínico liderado por Dr. Timothy Barrett</div>
-                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
-
                                     <div class="cbp-caption">
                                         <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/2.jpg" alt="" />
+                                            <img src="fotos/timothy barret.jpg" alt="Foto del proyecto" />
                                         </div>
-                                        <div class="cbp-caption-activeWrap">
+                                    <div class="cbp-l-grid-projects-title">Ensayo clínico liderado por Dr. Timothy Barrett</div>
+                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
+                                       <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
                                                 <div class="cbp-l-caption-body">
-                                                    <a href="img/works/2big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 2<br>fecha lanzamiento">Leer más</a>
+                                                  <a href="project_tim.html" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 2. Fecha lanzamiento">Leer más</a>
+                                               </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="cbp-item graphic logo">
+                                    <div class="cbp-caption">
+                                        <div class="cbp-caption-defaultWrap">
+                                            <img src="fotos/pacientes.jpg" alt="Foto del proyecto" />
+                                        </div>
+                                    <div class="cbp-l-grid-projects-title">Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud</div>
+                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
+                                       <div class="cbp-caption-activeWrap">
+                                            <div class="cbp-l-caption-alignCenter">
+                                                <div class="cbp-l-caption-body">
+                                                   <a href="project_salud.html" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 3. Fecha lanzamiento">Leer más</a>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="cbp-item graphic logo">
-                                    <div class="cbp-l-grid-projects-title">Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud</div>
-                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
-
-                                    <div class="cbp-caption">
+                                   <div class="cbp-caption">
                                         <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/3.jpg" alt="" />
+                                            <img src="fotos/psicologa.jpg" alt="Foto del proyecto" />
                                         </div>
+                                    <div class="cbp-l-grid-projects-title">Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares</div>
+                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
                                         <div class="cbp-caption-activeWrap">
                                             <div class="cbp-l-caption-alignCenter">
                                                 <div class="cbp-l-caption-body">
-
-                                                    <a href="http://vimeo.com/14912890" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 3<br>fecha lanzamiento">Leer más</a>
+                                                    <a href="project_psicosocial.html" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 4. Fecha lanzamiento">Leer más</a>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </li>
+
 <!-- aquí:
                                 <li class="cbp-item web-design graphic">
                                     <div class="cbp-caption">
@@ -241,7 +248,7 @@
                         </div>
 
                         <div class="cbp-l-loadMore-button">
-                            <a href="ajax/loadMore.html" class="cbp-l-loadMore-button-link">Cargar más</a>
+                            <a href="#" class="cbp-l-loadMore-button-link">Cargar más</a>
                         </div>
                     </div>
                 </div>
