--- a/web con plantilla final/project_psicosocial.html
+++ b/web con plantilla final/project_psicosocial.html
@@ -79,7 +79,7 @@
                             <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
                             <li><a href="contact.html">Contacto</a></li>
-                            <li><a href="about.html">Sobre nosotros</a></li>
+                            <li><a href="about.html">Sobre sus desarrolladores</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
@@ -117,6 +117,8 @@
                       <header>
                         <h4 class="heading">Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares</h4>
                       </header>
+
+                        <img src="fotos/luz.jpg" alt="Foto de la psicologa"/>
 
 <!--
                         <div id="filters-container" class="cbp-l-filters-button">
