--- a/web con plantilla final/project_tim.html
+++ b/web con plantilla final/project_tim.html
@@ -79,7 +79,7 @@
                             <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
                             <li><a href="contact.html">Contacto</a></li>
-                            <li><a href="about.html">Sobre nosotros</a></li>
+                            <li><a href="about.html">Sobre sus desarrolladores</a></li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta<i class="fa fa-angle-down"></i></a>
                                 <ul class="dropdown-menu">
@@ -106,7 +106,6 @@
                 </div>
             </div>
         </section>
-
         </header>
 
         <!-- end header -->
@@ -119,6 +118,7 @@
                         <h4 class="heading">Ensayo clínico liderado por Dr. Timothy Barrett</h4>
                       </header>
 
+                        <img src="fotos/tim.jpg" alt="Foto del investigador"/>
 <!--
                         <div id="filters-container" class="cbp-l-filters-button">
                             <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">Todos
@@ -258,9 +258,11 @@
                         </tr>
                      </table>                      
                      <article>                              
-                      <p>Consiste en valorar la seguridad y efectividad de un principio activo en pacientes diagnosticados de síndrome de Wolfram mediante la puesta en marcha del ensayo clínico simultáneamente en Reino Unido, Francia y España. La repercusión de tal ensayo recae en que no existe actualmente un tratamiento farmacológico para dicha enfermedad, aun así, existen algunas vías alternativas que pueden ayudar a paliar y/o mejorar ciertos aspectos de la enfermedad.</p>
-                      <p>Los resultados que se pretenden evaluar son: los efectos del ácido valproico sobre la visión y sobre agudeza visual y sobre el volumen del vástago del cerebro como un sustituto de la neurodegeneración.</p> 
-                      <p>El reclutamiento de los pacientes se estima que será para septiembre u octubre de 2017 y la administración del fármaco, probablemente, empezará en febrero de 2018.</p>
+                      <p>El Dr. Timothy Barrett es un investigador que dedica gran parte de su labor al estudio del síndrome de Wolfram. En 2014 pidió una patente para llevar a cabo un ensayo clínico de seguridad y efectividad de un principio activo con objeto de retrasar el desarrollo de la enfermedad gracias a los resultados obtenidos con un modelo celular del síndrome de Wolfram, desarrollado por su equipo.</p>
+                      <p>El 14 de Diciembre de 2016, la Consejería de Investigación Médica del Reino Unido concedió 2 millones de libras (2.5 millones de dólares) de financiación para su equipo británico de Birmingham. Éste será el primer ensayo clínico aleatorio y controlado del síndrome de Wolfram. Invitaremos a 70 niños y adultos con síndrome de Wolfram que formen parte del mismo. Estos pacientes procederán de 5 centros: adultos de Birmingham (Dr. Ben Wright) y niños de Birmingham (Dr. Renuka Dias); Almería (Dra. Gema Esteban Bueno); París (Pr. Christophe Orssaud); Montpellier (Pr. Christian Hamel); Lodz (Pr. Wojciech Mlynarski).</p>
+                      <p>El ensayo clínico se llevará a cabo primero en Birmingham (Reino Unido) en agosto de 2017, mientras que en el resto de países europeos sería en marzo de 2018. El reclutamiento de los pacientes se estima que será para septiembre u octubre de 2017.</p>
+                      <p>Consiste en valorar la seguridad y efectividad de un principio activo en pacientes diagnosticados de síndrome de Wolfram. La repercusión de tal ensayo recae en que no existe actualmente un tratamiento farmacológico para dicha enfermedad, aun así existen algunas vías alternativas que puedan ayudar a paliar y/o mejorar ciertos aspectos de la enfermedad.</p>
+                      <p>Los resultados que se pretenden evaluar son: los efectos del medicamento (ácido valproico) sobre la visión, sobre agudeza visual y sobre el volumen del vástago del cerebro como un sustituto de la neurodegeneración.</p>
                      </article>                              
                     </div>
                 </div>
