--- a/web con plantilla final/login.html
+++ b/web con plantilla final/login.html
@@ -100,7 +100,7 @@
 			<hr class="colorgraph">
 
 			<div class="form-group">
-				<input type="email" name="text" id="user name" class="form-control input-lg" placeholder="Nombre de usuario" tabindex="4">
+				<input type="email" name="email" id="email" class="form-control input-lg" placeholder="Dirección de correo electrónico" tabindex="4">
 			</div>
 			<div class="form-group">
 				<input type="password" class="form-control input-lg" id="exampleInputPassword1" placeholder="Contraseña">
