--- a/web con plantilla final/project_psicosocial.html
+++ b/web con plantilla final/project_psicosocial.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -120,123 +120,6 @@
 
                         <img src="fotos/luz.jpg" alt="Foto de la psicologa"/>
 
-<!--
-                        <div id="filters-container" class="cbp-l-filters-button">
-                            <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">Todos
-                                <div class="cbp-filter-counter"></div>
-                            </div>
-                            <div data-filter=".identity" class="cbp-filter-item">Recientes
-                                <div class="cbp-filter-counter"></div>
-                            </div>
-                            <div data-filter=".web-design" class="cbp-filter-item">2016
-                                <div class="cbp-filter-counter"></div>
-                            </div>
-
-                            <div data-filter=".graphic" class="cbp-filter-item">2015
-                                <div class="cbp-filter-counter"></div>
-                            </div>
-                            <div data-filter=".logo" class="cbp-filter-item">Cerrados
-                                <div class="cbp-filter-counter"></div>
-                            </div>
-                        </div>
-
-                        <div id="grid-container" class="cbp-l-grid-projects">
-                            <ul>
-                                <li class="cbp-item graphic">
-                                    <div class="cbp-caption">
-                                        <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/1.jpg" alt="" />
-                                        </div>
-                                        <div class="cbp-caption-activeWrap">
-                                            <div class="cbp-l-caption-alignCenter">
-                                                <div class="cbp-l-caption-body">
-                                                   <a href="img/works/1big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 1<br>fecha lanzamiento">Leer más</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="cbp-l-grid-projects-title">Investigación y Atención bio-psicosocial a las personas afectadas por el síndrome de Wolfram y a sus familiares</div>
-                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
-                                </li>
-                                <li class="cbp-item web-design logo">
-                                    <div class="cbp-caption">
-                                        <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/2.jpg" alt="" />
-                                        </div>
-                                        <div class="cbp-caption-activeWrap">
-                                            <div class="cbp-l-caption-alignCenter">
-                                                <div class="cbp-l-caption-body">
-                                                    <a href="img/works/2big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 2<br>Fecha lanzamiento">Leer más</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="cbp-l-grid-projects-title">Ensayo clínico liderado por Dr. Timothy Barrett</div>
-                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
-                                </li>
-                                <li class="cbp-item graphic logo">
-                                    <div class="cbp-caption">
-                                        <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/3.jpg" alt="" />
-                                        </div>
-                                        <div class="cbp-caption-activeWrap">
-                                            <div class="cbp-l-caption-alignCenter">
-                                                <div class="cbp-l-caption-body">
-                                                   <a href="http://vimeo.com/14912890" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 3<br>fecha lanzamiento">Leer más</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="cbp-l-grid-projects-title">Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud</div>
-                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
-                                </li>
-
-                                <li class="cbp-item web-design graphic">
-                                    <div class="cbp-caption">
-                                        <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/4.jpg" alt="" />
-                                        </div>
-                                        <div class="cbp-caption-activeWrap">
-                                            <div class="cbp-l-caption-alignCenter">
-                                                <div class="cbp-l-caption-body">
-
-                                                    <a href="img/works/4big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 4<br>fecha lanzamiento">Leer más</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="cbp-l-grid-projects-title">Proyecto 4</div>
-                                    <div class="cbp-l-grid-projects-desc">fecha lanzamiento</div>
-                                </li>
-                                <li class="cbp-item identity web-design">
-                                    <div class="cbp-caption">
-                                        <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/5.jpg" alt="" />
-                                        </div>
-                                        <div class="cbp-caption-activeWrap">
-                                            <div class="cbp-l-caption-alignCenter">
-                                                <div class="cbp-l-caption-body">
-
-                                                    <a href="img/works/5big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 5<br>fecha lanzamiento">Leer más</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="cbp-l-grid-projects-title">Proyecto 5</div>
-                                    <div class="cbp-l-grid-projects-desc">fecha lanzamiento</div>
-                                </li>
-
-
-
-
-
-                            </ul>
-                        </div>
-
-                        <div class="cbp-l-loadMore-button">
-                            <a href="ajax/loadMore.html" class="cbp-l-loadMore-button-link">Cargar más</a>
-                        </div>
--->
                      <article>                              
                       <p>Consiste en la investigación, detección de necesidades y atención de éstas tanto desde el ámbito biológico como psicológico y social intentando siempre dar una atención e intervención individualizada que mejore la calidad de vida de las personas afectadas por el SW y sus familias así como llevar a cabo actividades de concienciación y sensibilización respecto a las ER.</p>
                       <p>Actualmente, este proyecto se encuentra subvencionado por Fundación Universia y Fundación Konecta (2015) y Obra Social la Caixa (2016).</p>
@@ -299,7 +182,6 @@
                     </div>
                 </div>
             </div>
-<!--
             <div id="sub-footer">
                 <div class="container">
                     <div class="row">
@@ -312,16 +194,7 @@
                                 </div>
                             </div>
                         </div>
--->
-                        <!--<div class="col-lg-6">
-					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
-				</div>-->
+
                     </div>
                 </div>
             </div>
