--- a/web con plantilla final/project_tim.html
+++ b/web con plantilla final/project_tim.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -59,22 +59,8 @@
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Inicio</a></li>
-                            <li class="active"><a href="proyects.html">Proyectos</a></li>
-                            <!--  <li class="dropdown">
-                            <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Proyectos <i class="fa fa-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="newProyects.html">Proyectos Nuevos</a></li>
-                                <li><a href="oldProyects.html">Proyectos Antiguos</a></li>
-								<li class="dropdown-submenu">
-									<a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown">Pages</a>
-									<ul class="dropdown-menu">
-										<li><a href="404.html">404</a></li>
-										<li><a href="register.html">Register</a></li>
-										<li><a href="login.html">Login</a></li>
-									</ul>	
-								</li>
-                            </ul>
-                        </li>-->
+                            <li class="active"><a href="projects.html">Proyectos</a></li>
+                           
                             <li><a href="blog.html">Noticias</a></li>
                             <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
 
@@ -119,124 +105,9 @@
                       </header>
 
                         <img src="fotos/tim.jpg" alt="Foto del investigador"/>
-<!--
-                        <div id="filters-container" class="cbp-l-filters-button">
-                            <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">Todos
-                                <div class="cbp-filter-counter"></div>
-                            </div>
-                            <div data-filter=".identity" class="cbp-filter-item">Recientes
-                                <div class="cbp-filter-counter"></div>
-                            </div>
-                            <div data-filter=".web-design" class="cbp-filter-item">2016
-                                <div class="cbp-filter-counter"></div>
-                            </div>
 
-                            <div data-filter=".graphic" class="cbp-filter-item">2015
-                                <div class="cbp-filter-counter"></div>
-                            </div>
-                            <div data-filter=".logo" class="cbp-filter-item">Cerrados
-                                <div class="cbp-filter-counter"></div>
-                            </div>
-                        </div>
-
-                        <div id="grid-container" class="cbp-l-grid-projects">
-                            <ul>
-                                <li class="cbp-item graphic">
-                                    <div class="cbp-caption">
-                                        <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/1.jpg" alt="" />
-                                        </div>
-                                        <div class="cbp-caption-activeWrap">
-                                            <div class="cbp-l-caption-alignCenter">
-                                                <div class="cbp-l-caption-body">
-                                                   <a href="img/works/1big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 1<br>fecha lanzamiento">Leer más</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="cbp-l-grid-projects-title">Ensayo clínico del Dr. Fumihiko Urano</div>
-                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
-                                </li>
-                                <li class="cbp-item web-design logo">
-                                    <div class="cbp-caption">
-                                        <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/2.jpg" alt="" />
-                                        </div>
-                                        <div class="cbp-caption-activeWrap">
-                                            <div class="cbp-l-caption-alignCenter">
-                                                <div class="cbp-l-caption-body">
-                                                    <a href="img/works/2big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 2<br>fecha lanzamiento">Leer más</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="cbp-l-grid-projects-title">Ensayo clínico liderado por Dr. Timothy Barrett</div>
-                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
-                                </li>
-                                <li class="cbp-item graphic logo">
-                                    <div class="cbp-caption">
-                                        <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/3.jpg" alt="" />
-                                        </div>
-                                        <div class="cbp-caption-activeWrap">
-                                            <div class="cbp-l-caption-alignCenter">
-                                                <div class="cbp-l-caption-body">
-                                                   <a href="http://vimeo.com/14912890" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 3<br>fecha lanzamiento">Leer más</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="cbp-l-grid-projects-title">Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud</div>
-                                    <div class="cbp-l-grid-projects-desc">Fecha lanzamiento</div>
-                                </li>
-
-                                <li class="cbp-item web-design graphic">
-                                    <div class="cbp-caption">
-                                        <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/4.jpg" alt="" />
-                                        </div>
-                                        <div class="cbp-caption-activeWrap">
-                                            <div class="cbp-l-caption-alignCenter">
-                                                <div class="cbp-l-caption-body">
-
-                                                    <a href="img/works/4big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 4<br>fecha lanzamiento">Leer más</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="cbp-l-grid-projects-title">Proyecto 4</div>
-                                    <div class="cbp-l-grid-projects-desc">fecha lanzamiento</div>
-                                </li>
-                                <li class="cbp-item identity web-design">
-                                    <div class="cbp-caption">
-                                        <div class="cbp-caption-defaultWrap">
-                                            <img src="img/works/5.jpg" alt="" />
-                                        </div>
-                                        <div class="cbp-caption-activeWrap">
-                                            <div class="cbp-l-caption-alignCenter">
-                                                <div class="cbp-l-caption-body">
-
-                                                    <a href="img/works/5big.jpg" class="cbp-lightbox cbp-l-caption-buttonRight" data-title="Proyecto 5<br>fecha lanzamiento">Leer más</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="cbp-l-grid-projects-title">Proyecto 5</div>
-                                    <div class="cbp-l-grid-projects-desc">fecha lanzamiento</div>
-                                </li>
-
-
-
-
-
-                            </ul>
-                        </div>
-
-                        <div class="cbp-l-loadMore-button">
-                            <a href="ajax/loadMore.html" class="cbp-l-loadMore-button-link">Cargar más</a>
-                        </div>
--->
-                     <table class="table table-bordered">                      
+                     <table class="table table-bordered">   
+                        <tr>
                            <th>Presupuesto total</th>
                            <td>113.529 euros</td>
                         </tr>
@@ -322,7 +193,7 @@
                     </div>
                 </div>
             </div>
-<!--
+
             <div id="sub-footer">
                 <div class="container">
                     <div class="row">
@@ -335,16 +206,7 @@
                                 </div>
                             </div>
                         </div>
--->
-                        <!--<div class="col-lg-6">
-					<ul class="social-network">
-						<li><a href="#" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#" data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="#" data-placement="top" title="Google plus"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
-				</div>-->
+
                     </div>
                 </div>
             </div>
