--- a/web con plantilla final/oneProyect.html
+++ b/web con plantilla final/oneProyect.html
@@ -92,17 +92,45 @@
                             <div class="inside">
                                 <h1>Título del proyecto</h1>
                                 <div class="row" id="proyectPage">
-                                    <div class="col-md-6">
-                                        <div id="profilePhoto">
-                                            <img src="img/dummies/img4.jpg" id="proyectImage" class="img-responsive" />
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div id="profilePhoto">
+                                                <img src="img/dummies/img4.jpg" id="proyectImage" class="img-responsive" />
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div id="information">
+                                                <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis lacus cursus, sollicitudin dolor in, pharetra tellus. Mauris rutrum ullamcorper nisl ut malesuada. Pellentesque non vulputate ex. Integer tempor sem id commodo consequat. Donec egestas mi in consectetur malesuada. Nullam tincidunt gravida lectus, et maximus justo pharetra quis. Nunc sagittis enim nec efficitur tristique. Nullam non porta nulla. Proin id ex id mi feugiat facilisis nec quis risus. Sed commodo luctus ornare. Sed maximus luctus sem, mattis pretium sapien dignissim vel. Nullam a ultricies turpis. Aliquam erat volutpat. Nunc iaculis tempus aliquam. Duis nec mi nibh. Proin eget sem id risus tempus tincidunt. Mauris tempor orci quam, a gravida metus ullamcorper ac. Aliquam vel tortor rhoncus, egestas turpis sit amet, facilisis nisl. Vivamus ullamcorper tortor eu sapien laoreet lacinia. Pellentesque quis felis nunc. Integer eu odio purus. Etiam in auctor mauris, in ultricies tortor. Vestibulum dictum nisl sed iaculis viverra. In efficitur nisl sed diam hendrerit, id bibendum ipsum vehicula. Aliquam vitae ligula sem. Curabitur lobortis leo imperdiet tellus accumsan iaculis. Sed nec consequat nisi, at laoreet est. In non arcu elementum, pellentesque erat sit amet, tristique turpis. Morbi vitae turpis enim. </p>
+
+                                            </div>
+                                            <button type="button" class="btn btn-primary btn-lg">¡Participa!</button>
                                         </div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <div id="information">
-                                            <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis lacus cursus, sollicitudin dolor in, pharetra tellus. Mauris rutrum ullamcorper nisl ut malesuada. Pellentesque non vulputate ex. Integer tempor sem id commodo consequat. Donec egestas mi in consectetur malesuada. Nullam tincidunt gravida lectus, et maximus justo pharetra quis. Nunc sagittis enim nec efficitur tristique. Nullam non porta nulla. Proin id ex id mi feugiat facilisis nec quis risus. Sed commodo luctus ornare. Sed maximus luctus sem, mattis pretium sapien dignissim vel. Nullam a ultricies turpis. Aliquam erat volutpat. Nunc iaculis tempus aliquam. Duis nec mi nibh. Proin eget sem id risus tempus tincidunt. Mauris tempor orci quam, a gravida metus ullamcorper ac. Aliquam vel tortor rhoncus, egestas turpis sit amet, facilisis nisl. Vivamus ullamcorper tortor eu sapien laoreet lacinia. Pellentesque quis felis nunc. Integer eu odio purus. Etiam in auctor mauris, in ultricies tortor. Vestibulum dictum nisl sed iaculis viverra. In efficitur nisl sed diam hendrerit, id bibendum ipsum vehicula. Aliquam vitae ligula sem. Curabitur lobortis leo imperdiet tellus accumsan iaculis. Sed nec consequat nisi, at laoreet est. In non arcu elementum, pellentesque erat sit amet, tristique turpis. Morbi vitae turpis enim. </p>
-
-                                        </div>
-                                        <button type="button" class="btn btn-primary btn-lg">¡Participa!</button>
+                                    <div class="row">
+                                        <table class="table table-bordered table-striped">
+                                            <tbody>
+                                                <tr>
+                                                    <th>Presupuesto total</th>
+                                                    <td>60.000 euros</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>Presupuesto concedido</th>
+                                                    <td>41.614,55 euros</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>Financiación pendiente</th>
+                                                    <td>18.385,45 euros</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>Duración</th>
+                                                    <td>Permanente</td>
+                                                </tr>
+                                                <tr>
+                                                    <th>Año de inicio</th>
+                                                    <td>2011</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
 
