--- a/web con plantilla final/contact.html
+++ b/web con plantilla final/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>WADWofram - Contacto </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Bootstrap 3 template for corporate business" />
+    <meta name="description" content="Wolfram.org" />
     <!-- css -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/cubeportfolio.min.css" rel="stylesheet" />
@@ -74,16 +74,16 @@
                             <p>¡Escríbenos y nosotros te la resolveremos!</p>
                         </div>
                         <div class="col-md-offset-0">
-                        <div id="chat">
-                            <form role="form">
-                                <div class="form-group">
-                                    <label for="text-area">Chat</label>
-                                    <textarea rows="10" id="text-area" placeholder="Escribe aquí tu mensaje"></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-default">
-                                    <span class="glyphicon glyphicon-envelope"></span>Enviar</button>
-                            </form>
-                        </div>
+                            <div id="chat">
+                                <form role="form">
+                                    <div class="form-group">
+                                        <label for="text-area">Chat</label>
+                                        <textarea rows="10" id="text-area" placeholder="Escribe aquí tu mensaje"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-default">
+                                        <span class="glyphicon glyphicon-envelope"></span>Enviar</button>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
