--- a/web con plantilla final/oneProyect.html
+++ b/web con plantilla final/oneProyect.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Sailor - Bootstrap 3 corporate template</title>
+    <title>WADWolfram - Proyecto </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Bootstrap 3 template for corporate business" />
+    <meta name="description" content="Wolfram.org" />
     <!-- css -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="plugins/flexslider/flexslider.css" rel="stylesheet" media="screen" />
