Clean. Background proof
-Innecessary files deleted.
-some little mistakes corrected

--- a/web con plantilla final/contact.html
+++ b/web con plantilla final/contact.html
@@ -113,10 +113,10 @@
             <div class="col-lg-4 col-lg-offset-0">
                 <h3>¿Dónde estamos?<br><h4>Datos</h4></h3>
                 <hr class="colorgraph">
-                <h5><span class="glyphicon glyphicon-home"></span> Dirección: <br> <br>  <li>C/ Picadilly, nº 7, Almería, Andalucía</li></h5>
-                 <h5><span class="glyphicon glyphicon-phone"></span> Teléfono: <br><br><li>653 115 307</li></h5>
-                <h5><span class="glyphicon glyphicon-print"></span> Fax:<br> <br><li></li></h5>
-                <h5><span class="glyphicon glyphicon-send"></span> E-mail:<br> <br><li></li></h5>
+                <h5><span class="glyphicon glyphicon-home"></span> Dirección:</h5><font color="white"><li>C/ Picadilly, nº 7, Almería, Andalucía</li></font>
+                 <h5><span class="glyphicon glyphicon-phone"></span> Teléfono:</h5><font color="white"><li>653 115 307</li></font>
+                <h5><span class="glyphicon glyphicon-print"></span> Fax:</h5><font color="white"><li></li></font>
+                <h5><span class="glyphicon glyphicon-send"></span> E-mail:</h5><font color="white"><li></li></font>
                 <hr class="colorgraph">
             </div>    
         
