--- a/web con plantilla final/project_fumi.html
+++ b/web con plantilla final/project_fumi.html
@@ -65,8 +65,8 @@
                     </div>
                     <div class="navbar-collapse collapse ">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="index.html">Inicio</a></li>
-                            <li><a href="proyects.html">Proyectos </a></li>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li class="active"><a href="projects.html">Proyectos </a></li>
                             <li><a href="blog.html">Noticias </a></li>
                             <li><a href="contact.html">Contacto </a></li>
                             <li><a href="about.html">Sobre sus desarrolladores</a></li>
