--- a/web con plantilla final/projects.html
+++ b/web con plantilla final/projects.html
@@ -77,6 +77,22 @@
                     </div>
                 </div>
             </div>
+            
+             <section id="inner-headline">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <br><br><br>
+                            <!--               <ul class="breadcrumb">
+                           <li><a href="index.html"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
+                                <li><a href="projects.html">Proyectos</a></li>
+                                <li class="active">Proyecto</li>
+                            </ul>-->
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
         </header>
 
         <!-- end header -->
