screen captures and others
- Diagram
- Screen captures
- Fonts problem solved

--- a/web con plantilla final/contact.html
+++ b/web con plantilla final/contact.html
@@ -94,7 +94,7 @@
 
 
             <div class="col-lg-4  col-xs-offset-0 ">
-                <h3>¿Tienes alguna duda?<br><h4>Chat</h4></h3>
+                <h3><font color="white">¿Tienes alguna duda?<br><h4><font color="white">Chat</font></h4></font></h3>
                 <hr class="colorgraph">
      <!--           <div id="sendmessage">Your message has been sent. Thank you!</div>
                 <div id="errormessage"></div>
@@ -111,12 +111,12 @@
                 <hr class="colorgraph">
             </div>
             <div class="col-lg-4 col-lg-offset-0">
-                <h3>¿Dónde estamos?<br><h4>Datos</h4></h3>
+                <h3><font color="white">¿Dónde estamos?</font><br><h4><font color="white">Datos</font></h4></h3>
                 <hr class="colorgraph">
-                <h5><span class="glyphicon glyphicon-home"></span> Dirección:</h5><font color="white"><li>C/ Picadilly, nº 7, Almería, Andalucía</li></font>
-                 <h5><span class="glyphicon glyphicon-phone"></span> Teléfono:</h5><font color="white"><li>653 115 307</li></font>
-                <h5><span class="glyphicon glyphicon-print"></span> Fax:</h5><font color="white"><li></li></font>
-                <h5><span class="glyphicon glyphicon-send"></span> E-mail:</h5><font color="white"><li></li></font>
+                <h5><font color="white"><span class="glyphicon glyphicon-home"></span> Dirección:</font></h5><font color="white"><li>C/ Picadilly, nº 7, Almería, Andalucía</li></font>
+                <h5><font color="white"> <span class="glyphicon glyphicon-phone"></span> Teléfono:</font></h5><font color="white"><li>653 115 307</li></font>
+                <h5><font color="white"> <span class="glyphicon glyphicon-print"></span> Fax:</font></h5><font color="white"><li></li></font>
+                <h5><font color="white"> <span class="glyphicon glyphicon-send"></span> E-mail:</font></h5><font color="white"><li></li></font>
                 <hr class="colorgraph">
             </div>    
         
