--- a/web con plantilla final/login.html
+++ b/web con plantilla final/login.html
@@ -42,7 +42,7 @@
                 <div class="navbar-collapse collapse ">
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Inicio</a></li>
-                         <li><a href="proyects.html">Proyectos</a></li>
+                         <li><a href="projects.html">Proyectos</a></li>
                       <!--  <li class="dropdown">
                             <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Proyectos <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
@@ -96,7 +96,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
 		<form role="form" class="register-form">
-			<h2>Entra ya <small>Participa de forma activa</small></h2>
+            <h2>¡Entra! <small>Participa de forma activa</small></h2>
 			<hr class="colorgraph">
 
 			<div class="form-group">
