--- a/web con plantilla final/register.html
+++ b/web con plantilla final/register.html
@@ -43,24 +43,8 @@
                         <ul class="nav navbar-nav">
                             <li><a href="index.html">Inicio</a></li>
                             <li><a href="projects.html">Proyectos</a></li>
-                            <!--  <li class="dropdown">
-                            <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Proyectos <i class="fa fa-angle-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="newProyects.html">Proyectos Nuevos</a></li>
-                                <li><a href="oldProyects.html">Proyectos Antiguos</a></li>
-								<li class="dropdown-submenu">
-									<a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown">Pages</a>
-									<ul class="dropdown-menu">
-										<li><a href="404.html">404</a></li>
-										<li><a href="register.html">Register</a></li>
-										<li><a href="login.html">Login</a></li>
-									</ul>	
-								</li>
-                            </ul>
-                        </li>-->
+                           
                             <li><a href="blog.html">Noticias</a></li>
-                            <!--	<li><a href="post-rightsidebar.html">Post right sidebar</a></li> -->
-
                             <li><a href="contact.html">Contacto</a></li>
                             <li><a href="about.html">Sobre sus desarrolladores</a></li>
                             <li class="dropdown active">
@@ -97,7 +81,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                         <form role="form" class="register-form">
-                            <h2>Por favor regístrate <small>Totalmente gratis</small></h2>
+                            <h2>Regístrate <small>Totalmente gratis</small></h2>
                             <hr class="colorgraph">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-6 col-md-6">
