--- a/web con plantilla final/index.html
+++ b/web con plantilla final/index.html
@@ -129,7 +129,7 @@
 
                                 <h4>Colabora con nuestros proyectos</h4>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuetext="Ensayo clínico del Dr. Fumihiko Urano: 0%" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                    <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuetext="Ensayo clínico del Dr. Fumihiko Urano: 0%" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
                                         Ensayo clínico del Dr. Fumihiko Urano: 0%
                                     </div>
                                 </div>
@@ -139,7 +139,7 @@
                                     </div>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="69" aria-valuetext="Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud: 69%" aria-valuemin="0" aria-valuemax="100" style="width: 69%">
+                                    <div class="progress-bar progress-bar-warning progress-bar-striped active" role="progressbar" aria-valuenow="69" aria-valuetext="Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía. Proyectos de Investigación en Salud: 69%" aria-valuemin="0" aria-valuemax="100" style="width: 69%">
                                         Subvenciones para la financiación de la I+D+i biomédica y en Ciencias de la Salud en Andalucía: 69%
                                     </div>
                                 </div>
@@ -150,7 +150,7 @@
                                 </div>
 
                                 <div class="flex-caption">
-                                    <a href="proyects.html" class="btn btn-theme">¡Anímate y participa!</a>
+                                    <a href="projects.html" class="btn btn-theme">¡Anímate y participa!</a>
                                 </div>
                             </div>
                             <div class="col-sm-6 col-lg-6">
